--- a/css/styles.css
+++ b/css/styles.css
@@ -438,7 +438,7 @@ body:has(.backdrop.is-open) {
   margin-right: 80px;
 }
 
-.title {
+.footer-title {
   font-weight: 500;
   margin-bottom: 16px;
 }
@@ -452,10 +452,9 @@ body:has(.backdrop.is-open) {
   background-color: #31d0aa;
 }
 
-.footer-form-wrapper {
+.footer-form {
   display: flex;
   gap: 24px;
-  align-items: center;
 }
 
 .footer-form-input {
@@ -479,6 +478,7 @@ body:has(.backdrop.is-open) {
 
 .footer-btn {
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 16px;
   padding: 8px 24px;
@@ -503,7 +503,8 @@ body:has(.backdrop.is-open) {
   z-index: 999;
   opacity: 0;
   pointer-events: none;
-  transition: opasity 250ms ease-in-out;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -521,40 +522,45 @@ body:has(.backdrop.is-open) {
   background-color: #fcfcfc;
   border-radius: 4px;
   padding: 72px 24px 24px;
-  box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   width: 408px;
   min-height: 584px;
   overflow-y: auto;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn {
+.close-btn {
   position: absolute;
   top: 24px;
   right: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0;
   width: 24px;
   height: 24px;
-  border-radius: 100%;
+  border-radius: 50%;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn:hover,
-.modal-btn:focus {
+.close-btn:hover,
+.close-btn:focus {
   background-color: #404bbf;
+  border: none;
 }
 
-.modal-btn-icon {
+.close-btn-icon {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn:hover .modal-btn-icon,
-.modal-btn:focus .modal-btn-icon {
-  fill: #fff;
+.close-btn:hover .close-btn-icon,
+.close-btn:focus .close-btn-icon {
+  fill: #ffffff;
 }
 
 .modal-caption {
@@ -566,6 +572,10 @@ body:has(.backdrop.is-open) {
 
 .modal-form-field {
   margin-bottom: 8px;
+}
+
+.modal-form-field:has(.modal-form-message) {
+  margin-bottom: 16px;
 }
 
 .modal-form-label {
@@ -583,6 +593,7 @@ body:has(.backdrop.is-open) {
 
 .modal-form-input {
   border: 1px solid rgb(46, 47, 66, 0.4);
+  background-color: transparent;
   border-radius: 4px;
   width: 100%;
   height: 40px;
@@ -614,7 +625,12 @@ body:has(.backdrop.is-open) {
   width: 100%;
   height: 120px;
   padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   resize: none;
+  background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -653,15 +669,17 @@ body:has(.backdrop.is-open) {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   cursor: pointer;
-  transition: 200ms ease-in-out;
-  transition-property: background-color, border;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 input[type='checkbox']:checked + .agreement-wrapper > .agreement-checkbox {
-  border-radius: 2px;
+  border: none;
   background-color: #404bbf;
   border: 1px solid #404bbf;
-  color: #fff;
+  fill: #f4f4fd;
 }
 
 .agreement-checkbox-icon {
