--- a/css/styles.css
+++ b/css/styles.css
@@ -480,7 +480,6 @@ body:has(.backdrop.is-open) {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
   padding: 8px 24px;
   min-width: 165px;
   height: 40px;
@@ -488,6 +487,7 @@ body:has(.backdrop.is-open) {
 
 .footer-btn-icon {
   fill: #fff;
+  margin-left: 16px;
 }
 /* #endregion */
 
