--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,10 @@
 /* #region Base */
 body {
-  /* Colors */
-  background-color: #fff;
-  color: #434455;
-
-  /* Fonts */
   font-family: 'Roboto', sans-serif;
+  color: #434455;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  background-color: #fff;
 }
 
 /* Reset start */
@@ -23,22 +20,25 @@ p {
 
 ul,
 ol {
-  list-style-type: none;
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 a {
-  text-decoration: none;
   color: currentColor;
+  text-decoration: none;
 }
+
 button {
   font-family: inherit;
   cursor: pointer;
 }
+
 address {
   font-style: normal;
 }
+
 img {
   display: block;
 }
@@ -74,13 +74,13 @@ body:has(.backdrop.is-open) {
 }
 
 .section-title {
+  margin-bottom: 72px;
   color: #2e2f42;
   font-size: 36px;
-  letter-spacing: 0.02em;
   line-height: 1.11;
+  letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-  margin-bottom: 72px;
 }
 
 .visually-hidden {
@@ -88,8 +88,8 @@ body:has(.backdrop.is-open) {
   width: 1px;
   height: 1px;
   margin: -1px;
-  border: 0;
   padding: 0;
+  border: 0;
 
   white-space: nowrap;
   clip-path: inset(100%);
@@ -99,16 +99,16 @@ body:has(.backdrop.is-open) {
 
 .btn {
   display: block;
-  border-radius: 4px;
   margin: 0 auto;
-  background-color: #4d5ae5;
-  color: #fff;
-  cursor: pointer;
-  font-weight: 500;
-  letter-spacing: 0.04em;
-  line-height: 1.5;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   border: none;
+  border-radius: 4px;
+  font-weight: 500;
+  color: #fff;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -136,8 +136,8 @@ body:has(.backdrop.is-open) {
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #4d5ae5;
   border-radius: 50%;
+  background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -165,8 +165,8 @@ body:has(.backdrop.is-open) {
 
 .header-nav {
   display: flex;
-  margin-right: auto;
   align-items: center;
+  margin-right: auto;
 }
 
 .header .logo {
@@ -179,8 +179,8 @@ body:has(.backdrop.is-open) {
 }
 
 .header-nav-link {
-  color: #2e2f42;
   font-weight: 500;
+  color: #2e2f42;
 }
 
 .header-contacts-list {
@@ -205,47 +205,46 @@ body:has(.backdrop.is-open) {
 }
 
 .header-nav-link.current {
-  color: #404bbf;
   position: relative;
+  color: #404bbf;
 }
 
 .header-nav-link.current::after {
   content: '';
+  position: absolute;
+  bottom: -1px;
   display: block;
   width: 100%;
   height: 4px;
-  background-color: #404bbf;
   border-radius: 2px;
-  position: absolute;
-  bottom: -1px;
+  background-color: #404bbf;
 }
 /* #endregion */
 
 /* #region Hero */
 .hero {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 188px 0;
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
     url('../images/people-office.jpg');
-
-  background-position: center;
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
-  padding: 188px 0;
-  max-width: 1440px;
-  margin: 0 auto;
 }
 
 .hero-title {
-  color: #fff;
-  font-size: 56px;
-  letter-spacing: 0.02em;
-  line-height: 1.07;
-  text-align: center;
-  margin: 0 auto 48px;
   max-width: 496px;
+  margin: 0 auto 48px;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
 }
 
 .hero-btn {
@@ -259,6 +258,7 @@ body:has(.backdrop.is-open) {
 .benefits {
   padding: 120px 0;
 }
+
 .benefits-list {
   display: flex;
   gap: 24px;
@@ -272,28 +272,28 @@ body:has(.backdrop.is-open) {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f4f4fd;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
   width: 264px;
   height: 112px;
   margin-bottom: 8px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background-color: #f4f4fd;
 }
 
 .benefits-item-title {
-  color: #2e2f42;
+  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
-  letter-spacing: 0.02em;
   line-height: 1.2;
-  margin-bottom: 8px;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 /* #endregion */
 
 /* #region Team */
 .team {
-  background-color: #f4f4fd;
   padding: 120px 0;
+  background-color: #f4f4fd;
 }
 
 .team .container {
@@ -309,9 +309,9 @@ body:has(.backdrop.is-open) {
 .team-card {
   display: flex;
   flex-direction: column;
-  background-color: #fff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  background-color: #ffffff;
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 2px 1px 0px rgba(46, 47, 66, 0.08);
@@ -322,18 +322,18 @@ body:has(.backdrop.is-open) {
 }
 
 .team-card-title {
-  color: #2e2f42;
+  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
-  letter-spacing: 0.02em;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   text-align: center;
-  margin-bottom: 8px;
+  color: #2e2f42;
 }
 
 .team-card-description {
-  text-align: center;
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .team .socials-link:hover,
@@ -351,15 +351,15 @@ body:has(.backdrop.is-open) {
 .portfolio-card-set {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
   row-gap: 48px;
+  column-gap: 24px;
 }
 
 .portfolio-card {
   display: flex;
   flex-direction: column;
-  background-color: #fff;
   width: calc((100% - 48px) / 3);
+  background-color: #ffffff;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -376,12 +376,12 @@ body:has(.backdrop.is-open) {
 }
 
 .portfolio-card-title {
-  color: #2e2f42;
+  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
-  letter-spacing: 0.02em;
   line-height: 1.2;
-  margin-bottom: 8px;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .portfolio-wrapper {
@@ -390,14 +390,14 @@ body:has(.backdrop.is-open) {
 }
 
 .overlay {
-  color: #f4f4fd;
-  padding: 40px 32px;
   position: absolute;
   top: 0;
   left: 0;
   transform: translateY(100%);
   width: 100%;
   height: 100%;
+  padding: 40px 32px;
+  color: #f4f4fd;
   background-color: #4d5ae5;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -409,9 +409,9 @@ body:has(.backdrop.is-open) {
 
 /* #region Footer */
 .footer {
+  padding: 100px 0;
   color: #fff;
   background-color: #2e2f42;
-  padding: 100px 0;
 }
 
 .footer .container {
@@ -439,8 +439,8 @@ body:has(.backdrop.is-open) {
 }
 
 .footer-title {
-  font-weight: 500;
   margin-bottom: 16px;
+  font-weight: 500;
 }
 
 .footer .socials {
@@ -458,18 +458,18 @@ body:has(.backdrop.is-open) {
 }
 
 .footer-form-input {
-  color: #fff;
+  width: 264px;
+  height: 40px;
   padding: 8px 16px;
   border: 1px solid #fff;
   border-radius: 4px;
-  width: 264px;
-  height: 40px;
-  background-color: transparent;
-  outline: transparent;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+  color: #fff;
+  background-color: transparent;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  outline: transparent;
 }
 
 .footer-form-input::placeholder {
@@ -480,36 +480,35 @@ body:has(.backdrop.is-open) {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 8px 24px;
   min-width: 165px;
   height: 40px;
+  padding: 8px 24px;
 }
 
 .footer-btn-icon {
-  fill: #fff;
   margin-left: 16px;
+  fill: #fff;
 }
 /* #endregion */
 
 /* #region Modal window */
 .backdrop {
-  background-color: rgba(46, 47, 66, 0.4);
-
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 999;
   width: 100%;
   height: 100%;
-  z-index: 999;
-  opacity: 0;
   pointer-events: none;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
-  opacity: 1;
   pointer-events: auto;
+  opacity: 1;
 }
 
 .modal {
@@ -519,14 +518,14 @@ body:has(.backdrop.is-open) {
   transform: translateX(-50%) translateY(-50%);
   display: flex;
   flex-direction: column;
-  background-color: #fcfcfc;
-  border-radius: 4px;
-  padding: 72px 24px 24px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
   width: 408px;
   min-height: 584px;
+  padding: 72px 24px 24px;
   overflow-y: auto;
+  border-radius: 4px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -537,20 +536,20 @@ body:has(.backdrop.is-open) {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0;
   width: 24px;
   height: 24px;
+  padding: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn:hover,
 .close-btn:focus {
-  background-color: #404bbf;
   border: none;
+  background-color: #404bbf;
 }
 
 .close-btn-icon {
@@ -564,10 +563,10 @@ body:has(.backdrop.is-open) {
 }
 
 .modal-caption {
+  margin-bottom: 16px;
   font-weight: 500;
   text-align: center;
   color: #2e2f42;
-  margin-bottom: 16px;
 }
 
 .modal-form-field {
@@ -581,10 +580,10 @@ body:has(.backdrop.is-open) {
 .modal-form-label {
   display: block;
   margin-bottom: 4px;
-  color: #8e8f99;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 
 .modal-form-wrapper {
@@ -592,12 +591,12 @@ body:has(.backdrop.is-open) {
 }
 
 .modal-form-input {
-  border: 1px solid rgb(46, 47, 66, 0.4);
-  background-color: transparent;
-  border-radius: 4px;
   width: 100%;
   height: 40px;
   padding: 11px 38px;
+  border: 1px solid rgb(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -620,16 +619,16 @@ body:has(.backdrop.is-open) {
 }
 
 .modal-form-message {
-  border: 1px solid rgb(46, 47, 66, 0.4);
-  border-radius: 4px;
   width: 100%;
   height: 120px;
+  resize: none;
   padding: 8px 16px;
+  border: 1px solid rgb(46, 47, 66, 0.4);
+  border-radius: 4px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-  resize: none;
   background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -665,11 +664,11 @@ body:has(.backdrop.is-open) {
   width: 16px;
   height: 16px;
   margin-right: 8px;
-  color: transparent;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  cursor: pointer;
+  color: transparent;
   fill: transparent;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
